# xacpp-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
src/: error.rs  handler.rs  lib.rs  message.rs  peer.rs  session.rs
src/commands/: mod.rs
src/events/: activity_event.rs  content.rs  interaction.rs  mod.rs  payload.rs  upload.rs  xacpp_event.rs
src/transport/: mod.rs  socket.rs  stdio.rs
tests/: peer_e2e_tests.rs  serde_tests.rs  socket_concurrent_tests.rs
