[package]
name = "xacpp"
version = "0.1.0"
edition = "2024"
description = "Agent Control Plane Protocol — Rust implementation"
license = "MIT"
repository = "https://github.com/drodreo/xacpp-rs"

[dependencies]
async-trait = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "process", "io-util", "rt", "macros", "rt-multi-thread", "time", "net"] }
